# x-defi-agent

./: .dockerignore  .env.example  .gitignore  ALGO_REFIT_PLAN.md  ALGO_REFIT_PROMPT.md  BUILD_PLAN.md  CHANGELOG_ALGO_REFIT.md  DEPLOYMENT.md  LICENSE  README.md  env.example.txt  fly.toml  package.json  pnpm-lock.yaml  vercel.json
apps/poster-ts/: README.md
apps/review-ui/: .gitignore  IMPLEMENTATION.md  (+8 more)
apps/workers-py/: Dockerfile  README.md  pyproject.toml
apps/workers-py/src/workers/: __init__.py  cli.py  config.py  db.py  llm.py  poster.py  scheduler.py
apps/workers-py/src/workers/drafts/: __init__.py  anti_ai.py  generator.py
apps/workers-py/src/workers/engagement/: __init__.py  reply_window.py
apps/workers-py/src/workers/excel/: dashboard.py
apps/workers-py/src/workers/graphics/: __init__.py  canva.py  canvas_design.py  higgsfield.py  logos.py  qa.py
apps/workers-py/src/workers/ingest/: defillama.py  rwa_xyz.py  telegram_newswire.py
apps/workers-py/src/workers/scoring/: materiality.py
apps/workers-py/src/workers/stories/: builder.py  enrichment.py
apps/workers-py/tests/: test_anti_ai.py  test_graphics_pipeline.py
config/: personal_facts.example.json  personal_facts.json  thresholds.json  watchlist.json
docs/: canva_integration.md  canva_templates_pass_one_briefs.md  higgsfield_integration.md  x_algorithm_2026_signals.md
scripts/: bump_grove.py  check_grove.py  fetch_logos.py  fix_ghost_jobs_and_diagnose_rwa.py  regenerate_media.py  reset_grove_for_repost.py
v0-handoff/: DESIGN.md  PROMPT.md  README.md  SAMPLE_DATA.json  SCHEMA.sql
(+37 files in other folders)
